--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
+    "check": "astro check",
     "astro": "astro"
   },
   "devDependencies": {
-    "astro": "^1.0.7"
+    "astro": "^1.0.7",
+    "typescript": "^4.7.4"
   }
 }
