--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,5 @@
 {
-  "compilerOptions": {
-    // Enable top-level await, and other modern ESM features.
-    "target": "ESNext",
-    "module": "ESNext",
-    // Enable node-style module resolution, for things like npm package imports.
-    "moduleResolution": "node",
-    // Enable JSON imports.
-    "resolveJsonModule": true,
-    // Enable stricter transpilation for better output.
-    "isolatedModules": true,
-    // Astro will directly run your TypeScript code, no transpilation needed.
-    "noEmit": true
-  }
+  "extends": "./tsconfig.base.json",
+  "include": ["**/*.ts", "**/*.vue", "**/*.astro", "**/*.json"],
+  "exclude": ["node_modules", "**/*.cy.jsx", "**/*.cy.tsx", "**/*.cy.js", "**/*.cy.ts"]
 }
